--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,3 @@
 JWT_SECRET="your_jwt_secret_key"
-PORT=5173
-GOOGLE_APP_PASSWORD="qcqvfiwnnkqogiah"
-IP_ADDRESS="192.168.29.253"
+PORT=3000
+GOOGLE_APP_PASSWORD="udmphckavdptldls"
